[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "turnaround_regression"
version = "0.0.1"
description = "A second approach to identify which features impact the most on turnaround times"
authors = [
  { name = "Renan Amaral de Oliveira" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["turnaround_regression"]
include = ["pyproject.toml", "turnaround_regression/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["turnaround_regression"]
force-sort-within-sections = true

